@@ -21,6 +21,9 @@ Post v24.03.0
     MAC addresses configured on the LSP with "unknown", are learnt via the
     OVN native FDB.
   - Add support for ovsdb-server `--config-file` option in ovn-ctl.
+  - Add support for CT zone limit that can be specified per LR
+    (options:ct-zone-limit), LS (other_config:ct-zone-limit) or LSP
+    (options:ct-zone-limit).
 
 OVN v24.03.0 - 01 Mar 2024
 --------------------------
